--- a/src/index.css
+++ b/src/index.css
@@ -7,55 +7,28 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-* {
-  margin: 0;
-  padding: 0;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-.app {
-  max-width: 100%;
-  margin: 0;
-}
-.header {
-  background-color: rgb(69, 68, 68);
+.container{
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: antiquewhite;
-  height: 70px;
+  margin: 20px 50px;
+  padding: 20px;
+}
+.items{
+  padding: 20px;
+}
+.content{
+  width: 50%;
+}
+.header{
+  background-color: brown;
+  padding: 5px;
   width: 100%;
-  padding: 10px 0px;
-}
-.header img {
-  padding-right: 20px;
-}
-
-.header p {
-  padding-right: 60px;
-  font-weight: 500;
-  font-size: 16px;
-}
-.header .img2 {
-  color: rgb(38, 173, 169);
-  font-size: 2rem;
-  font-family: "Times New Roman", Times, serif;
-}
-.main {
-  background-color: black;
-  color: aliceblue;
-  height: 100vh;
-  padding: 70px;
-}
-.phase1 {
-  display: flex;
   justify-content: center;
-  align-items: center;
-  padding-left: 50px;
+  text-align: center;
+  border-radius: 20px 20px 0 0;
 }
-.image {
-  width: 50px;
+.header h3{
+  font-size: 32px;
+  text-transform: uppercase;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 800;
 }
